# DjangoToDO

./: README.md  manage.py  pyproject.toml  requirements.txt
DjangoToDO/: asgi.py  settings.py  urls.py  wsgi.py
DjangoToDO/cdn/: conf.py
DjangoToDO/static/css/: style.css
DjangoToDO/static/js/: mdb.min.js
accounts/: forms.py  urls.py  views.py
accounts/templates/accounts/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_email.html  password_reset_subject.txt  registration.html
app/: admin.py  forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py
app/templates/app/: index.html  list_task.html  login.html  registration.html  search_task.html  task_delete.html  task_detail.html  task_form.html
app/templatetags/: general_tags.py
config/: asgi.py  settings.py  urls.py  wsgi.py
config/static/css/: mdb.min.css
templates/: base.html
templates/inc/: _nav.html
