[tool.poetry]
name = "djangotodo"
version = "0.1.0"
description = ""
authors = ["a-khomitskyi <homitskiy.andriy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.2"
python-dotenv = "^0.19.2"
psycopg2 = "^2.9.3"
dj-database-url = "^0.5.0"
django-bootstrap-datepicker-plus = "^4.0.0"
requests = "^2.27.1"
pip = "^22.0.3"
django-bootstrap4 = "^21.2"
gunicorn = "^20.1.0"
django-storages = "^1.12.3"
boto3 = "^1.20.53"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
